--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.4.0",
-    "push-dir": "^0.4.1"
+    "node-sass": "^4.9.0",
+    "push-dir": "^0.4.1",
+    "sass-loader": "^7.0.1"
   }
 }
