--- a/package.json
+++ b/package.json
@@ -23,20 +23,24 @@
     "@nuxtjs/google-tag-manager": "^1.1.0",
     "babel-polyfill": "^6.26.0",
     "intersection-observer": "^0.5.0",
-    "npm": "^6.0.1",
+    "npm": "^6.1.0",
     "nuxt": "^1.0.0",
     "vue-mq": "^0.2.1",
     "vue-observe-visibility": "^0.3.1",
+    "vue-parallaxy": "^1.1.1",
     "vue-youtube-embed": "^2.1.3"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.1",
+    "babel-eslint": "^8.2.3",
     "cross-env": "^5.1.5",
     "eslint": "^4.19.1",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.4.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-vue": "^4.5.0",
     "node-sass": "^4.9.0",
+    "prettier": "^1.13.4",
     "push-dir": "^0.4.1",
     "sass-loader": "^7.0.1"
   }
