--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,13 @@ cache:
 branches:
   only:
   - master
-  - test
+  - develop
 
 install:
   - npm install
 
 script:
-  - if [ "$TRAVIS_BRANCH" = "test" ]; then npm run generate:test; fi
+  - if [ "$TRAVIS_BRANCH" = "develop" ]; then npm run generate:develop; fi
   - if [ "$TRAVIS_BRANCH" = "master" ]; then npm run generate:prod; fi
 
 deploy:
@@ -33,5 +33,5 @@ deploy:
     target-branch: gh-pages
     local-dir: dist
     on:
-      branch: test
+      branch: develop
 
