--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "scripts": {
     "dev": "cross-env BASE_URL=http://localhost:3000 BACKEND_URL=https://app.netacademia.hu GTM=GTM-MWT4847 nuxt",
     "dev:prod": "cross-env BASE_URL=http://localhost:3000 BACKEND_URL=https://app.netacademia.hu GTM=GTM-MWT4847 npm run build && npm run start",
-    "generate:test": "cross-env BASE_URL=https://test.netacademia.hu BACKEND_URL=https://app.netacademia.hu GTM=GTM-MWT4847 npm run generate",
+    "generate:develop": "cross-env BASE_URL=https://test.netacademia.hu BACKEND_URL=https://app.netacademia.hu GTM=GTM-MWT4847 npm run generate",
     "generate:prod": "cross-env BASE_URL=https://www.netacademia.hu BACKEND_URL=https://app.netacademia.hu GTM=GTM-T3WLP7 npm run generate",
     "deploy:prod": "push-dir --dir=dist --branch=master --remote=https://github.com/NetAcademia/netacademia.github.io.git --cleanup",
-    "deploy:test": "push-dir --dir=dist --branch=gh-pages --cleanup",
+    "deploy:develop": "push-dir --dir=dist --branch=gh-pages --cleanup",
     "generate": "cross-env-shell nuxt generate && echo $BASE_URL > ./dist/CNAME",
     "build": "cross-env-shell nuxt build",
     "analyze": "cross-env-shell nuxt build --analyze",
