--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "vue-mq": "^0.2.1",
     "vue-observe-visibility": "^0.3.1",
     "vue-parallaxy": "^1.1.1",
-    "vue-youtube-embed": "^2.1.3"
+    "vue-youtube-embed": "^2.1.3",
+    "vue-lazyload": "^1.2.4"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
