--- a/package.json
+++ b/package.json
@@ -19,17 +19,21 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-free-regular": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@nuxtjs/axios": "^5.3.1",
     "@nuxtjs/google-tag-manager": "^1.2.0",
     "babel-polyfill": "^6.26.0",
     "intersection-observer": "^0.5.0",
     "npm": "^6.1.0",
     "nuxt": "^1.0.0",
+    "nuxt-fontawesome": "^0.2.0",
+    "vue-lazyload": "^1.2.4",
     "vue-mq": "^0.2.1",
     "vue-observe-visibility": "^0.3.1",
     "vue-parallaxy": "^1.1.1",
-    "vue-youtube-embed": "^2.1.3",
-    "vue-lazyload": "^1.2.4"
+    "vue-youtube-embed": "^2.1.3"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
