--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gsap": "^2.0.1",
     "intersection-observer": "^0.5.0",
     "jquery": "^3.3.1",
+    "jquery-touchswipe": "^1.6.18",
     "npm": "^6.1.0",
     "nuxt": "^1.4.1",
     "nuxt-fontawesome": "^0.2.0",
