--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,27 +8,16 @@ jobs:
     docker:
       - image: circleci/node:8:11
     steps:
-      # Checkout repository
       - checkout
-
-      # Restore cache
       - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          - v1-dependencies-
-
-      # Install dependencies
+          key: v1-dependencies-{{ checksum "package.json" }}
       - run:
           name: Install Dependencies
           command: yarn install
-
-      # Keep cache
       - save_cache:
           key: v1-dependencies-{{ checksum "package.json" }}
           paths:
             - "node_modules"
-
-       Build
        - run:
            name: Build
            command: yarn run generte:test
