--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,34 @@
+# Javascript Node CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-javascript/ for more details
+#
 version: 2
 jobs:
   build:
+    docker:
+      # specify the version you desire here
+      - image: circleci/node:8.11
+    working_directory: ~/repo
     branches:
       only:
         - DEV-244
-    working_directory: ~/repo
-    docker:
-      - image: circleci/node:8:11
     steps:
+
       - checkout
+
+      # Download and cache dependencies
       - restore_cache:
-          key: v1-dependencies-{{ checksum "package.json" }}
-      - run:
-          name: Install Dependencies
-          command: yarn install
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+
+      - run: npm install
+
       - save_cache:
-          key: v1-dependencies-{{ checksum "package.json" }}
           paths:
-            - "node_modules"
-       - run:
-           name: Build
-           command: yarn run generte:test
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+
+      # run tests!
+      - run: npm run generate:test
