--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,34 +1,38 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
 version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
       - image: circleci/node:8.11
     working_directory: ~/repo
     branches:
       only:
         - DEV-244
     steps:
-
       - checkout
-
-      # Download and cache dependencies
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-
-      - run: npm install
-
+      - run:
+          name: npm install
+          command: npm install
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-
-      # run tests!
-      - run: npm run generate:test
+      - run:
+          name: generate dist
+          command: |
+            if [ $CIRCLE_BRANCH == "DEV-244" ]; then
+              npm run generate:test
+            elif [ $CIRCLE_BRANCH == "master" ]; then
+              npm run generate:prod
+            fi
+      - run:
+        name: deploy to gh pages
+        command: |
+            if [ $CIRCLE_BRANCH == "DEV-244" ]; then
+              npm run deploy:test
+            elif [ $CIRCLE_BRANCH == "master" ]; then
+              npm run deploy:prod
+            fi
