--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
   - npm install
 
 script:
-  - if [ "$TRAVIS_BRANCH" = "develop" ]; then npm run generate:develop; fi
+  - if [ "$TRAVIS_BRANCH" = "develop" ]; then npm run generate:test; fi
   - if [ "$TRAVIS_BRANCH" = "master" ]; then npm run generate:prod; fi
 
 deploy:
