--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "private": true,
   "scripts": {
     "dev": "npm run dev:test",
-    "dev:test": "cross-env BASE_URL=http://localhost:3000 BACKEND_URL=http://pedellus-pedellustest.azurewebsites.net/ GTM=GTM-MWT4847 nuxt",
+    "dev:test": "cross-env BASE_URL=http://localhost:3000 BACKEND_URL=https://pedellus-pedellustest.azurewebsites.net/ GTM=GTM-MWT4847 nuxt",
     "dev:prod": "cross-env BASE_URL=http://localhost:3000 BACKEND_URL=https://app.netacademia.hu GTM=GTM-MWT4847 nuxt",
     "dev:local:puff": "cross-env BASE_URL=http://localhost:3000 BACKEND_URL=http://172.16.68.129 GTM=GTM-MWT4847 nuxt",
-    "generate:test": "cross-env BASE_URL=https://test.netacademia.hu BACKEND_URL=http://pedellus-pedellustest.azurewebsites.net/ GTM=GTM-MWT4847 npm run generate",
+    "generate:test": "cross-env BASE_URL=https://test.netacademia.hu BACKEND_URL=https://pedellus-pedellustest.azurewebsites.net/ GTM=GTM-MWT4847 npm run generate",
     "generate:prod": "cross-env BASE_URL=https://www.netacademia.hu BACKEND_URL=https://app.netacademia.hu GTM=GTM-T3WLP7 npm run generate",
-    "generate:local:puff": "cross-env BASE_URL=https://test.netacademia.hu BACKEND_URL=http://172.16.68.129 GTM=GTM-MWT4847 npm run generate",
+    "generate:local:puff": "cross-env BASE_URL=http://localhost:8080 BACKEND_URL=http://172.16.68.129 GTM=GTM-MWT4847 npm run generate",
     "deploy:test": "push-dir --dir=dist --branch=gh-pages",
     "deploy:prod": "push-dir --dir=dist --branch=master --remote=https://github.com/NetAcademia/netacademia.github.io.git",
     "generate": "cross-env-shell nuxt generate && echo $BASE_URL > ./dist/CNAME",
