--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ dist-ghpages
 .vscode
 
 \.DS_Store
+
+
+# csak webstorm path alias miatt kell, nuxt.config-bol jon egyebkent minden
+webpack.config.js
