--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "npm": "^6.1.0",
     "nuxt": "^1.4.1",
     "nuxt-fontawesome": "^0.2.0",
+    "vue-cookie-law": "^1.6.0",
     "vue-lazyload": "^1.2.6",
     "vue-mq": "^0.2.1",
     "vue-observe-visibility": "^0.3.1",
