--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@firebase/app": "^0.3.3",
+    "@firebase/database": "^0.3.4",
     "@fortawesome/fontawesome-free-brands": "^5.0.13",
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
